--- a/pages/index.css
+++ b/pages/index.css
@@ -34,25 +34,24 @@
   border-bottom: 2px solid #000000;
   width: calc(100% - 160px);
 }
-.navigation__logo {
-  margin: 0;
-  padding: 0;
-  gap: 6px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-}
 .navigation__logo-image {
   height: 22px;
   width: 22px;
+  margin: 0 6px 0 0;
+  padding: 0;
 }
-.navigation__logo-text {
+.navigation__logo {
   margin: 0;
   padding: 0;
   font-size: 27px;
   font-style: normal;
   font-weight: 600;
   line-height: 33px;
+  color: #000000;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .navigation__menu-items {
   margin: 0;
@@ -69,6 +68,14 @@
   font-weight: 400;
   font-style: normal;
   color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.navigation__menu-icon {
+  margin: 0;
+  padding: 0;
 }
 .navigation__icons {
   display: flex;
@@ -123,11 +130,15 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  margin: 40px 10px 0 0;
+  padding: 0;
 }
 .product-information__images {
   display: flex;
   justify-content: flex-end;
   gap: 28px;
+  margin: 0;
+  padding: 0;
 }
 .product-information__thumbnails {
   display: flex;
@@ -138,7 +149,7 @@
 }
 .product-information__main-image {
   margin: 0;
-  padding: 0;
+  padding: 0 0 20px;
   width: 522px;
   height: 540px;
   border-bottom: 1px solid #000000;
@@ -188,6 +199,8 @@
 .product-information__right-side {
   display: flex;
   flex-direction: column;
+  margin: 0 0 0 10px;
+  padding: 0;
 }
 .product-information__reviews {
   display: flex;
@@ -278,4 +291,130 @@
 .option-btn_active {
   color: #ffffff;
   background-color: #000000;
+}
+.product-information__instock-quantity {
+  width: 12px;
+  height: 12px;
+  background-color: #6fff00;
+  margin: 0;
+  padding: 0;
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px #abff68;
+  filter: blur(2px);
+}
+.product-information__instock {
+  display: flex;
+  padding: 0;
+  margin: 25px 0 15px 5px;
+  align-items: center;
+  gap: 10px;
+}
+.product-information__instock-currently {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+}
+.product-information__feature {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+  height: fit-content;
+  width: fit-content;
+}
+.product-information__feature-text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  margin: 0;
+  padding: 0;
+}
+.product-information__featured-specs {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.product-information__feature-icon {
+  height: 24px;
+  width: 24px;
+  margin: 0;
+  padding: 0;
+}
+.product-information__feature-view-all {
+  text-decoration: underline;
+  color: #000000;
+  font-size: 12.5px;
+  line-height: 15px;
+  font-weight: 400;
+}
+.product-information__btns {
+  display: flex;
+  gap: 15px;
+  border-bottom: 1px solid #000000;
+  width: calc(100% - 81px);
+}
+.product-information__cart-btn {
+  width: 200px;
+  height: 41px;
+  outline: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #b4e907;
+  border-radius: 15px;
+  color: #000000;
+  font-size: 17.5px;
+  line-height: 21px;
+  font-weight: 400;
+  margin: 40px 0 25px;
+  padding: 0;
+  text-decoration: none;
+}
+.product-information__buy-btn {
+  width: 200px;
+  height: 41px;
+  outline: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  background-color: #000000;
+  color: #ffffff;
+  font-size: 17.5px;
+  line-height: 21px;
+  font-weight: 400;
+  margin: 40px 0 25px;
+  padding: 0;
+  text-decoration: none;
+}
+.product-information__feature {
+  color: #000000;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  font-size: 17.5px;
+  line-height: 21px;
+  font-weight: 400;
+}
+.product-information__feature-image {
+  width: 24px;
+  height: 24px;
+  margin: 0 10px 0 0;
+  padding: 0;
+}
+.product-information__features {
+  margin: 25px 0 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.product-information__feature-span {
+  text-decoration: underline;
 }
