--- a/pages/index.css
+++ b/pages/index.css
@@ -122,7 +122,7 @@
 }
 .product-information {
   width: calc(100% - 160px);
-  margin: 0 auto;
+  margin: 0 auto 57px;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -208,6 +208,8 @@
   gap: 5px;
   margin: 0;
   padding: 0;
+  color: #000000;
+  text-decoration: none;
 }
 .product-information__reviews-star {
   height: 18px;
@@ -417,4 +419,104 @@
 }
 .product-information__feature-span {
   text-decoration: underline;
+}
+.promo-marquee {
+  height: 60px;
+  background-color: #000000;
+  color: #ffffff;
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 25px;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+}
+.promo-marquee__text {
+  font-size: 14px;
+  font-weight: 900px;
+  line-height: 17px;
+  margin: 0;
+  padding: 0;
+}
+.included {
+  margin: 0 auto 75px;
+  padding: 0;
+  width: calc(100% - 515px);
+  display: flex;
+  flex-direction: column;
+}
+.included__title {
+  text-align: center;
+  margin: 75px 0 50px;
+  padding: 0;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 41px;
+}
+.included__items {
+  display: flex;
+  flex-direction: row;
+  gap: 150px;
+  justify-content: space-between;
+}
+.included__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 26px;
+  height: fit-content;
+}
+.included__img {
+  width: 88px;
+  height: 88px;
+  padding: 0;
+  margin: 0;
+}
+.included__name {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  font-size: 17.5px;
+  line-height: 21px;
+  font-weight: 400;
+}
+.promo {
+  max-width: calc(100% - 160px);
+  width: fit-content;
+  margin: 0 auto 50px;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  border-radius: 20px;
+  overflow: hidden;
+}
+.promo__copy {
+  background-color: #102b26;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  padding: 94px 0 0;
+  color: #ffffff;
+  gap: 20px;
+}
+.promo__title {
+  max-width: 520px;
+  font-size: 34px;
+  font-weight: 700;
+  line-height: 41px;
+  margin: 0;
+  padding: 0;
+}
+.promo__paraghraph {
+  max-width: 510px;
+  margin: 0;
+  padding: 0;
+  font-size: 17.5px;
+  font-weight: 400;
+  line-height: 21px;
+}
+.promo__image {
+  width: 636px;
 }
