--- a/pages/index.css
+++ b/pages/index.css
@@ -9,13 +9,15 @@
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
-  background-color: #f0f0f0;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  max-width: 1920px;
+  overflow: hidden;
 }
 .body {
   margin: 0;
   padding: 0;
+  background-color: #f0f0f0;
 }
 .annoucment-bar {
   width: 100%;
@@ -68,6 +70,7 @@
   align-items: center;
   justify-content: center;
   gap: 30px;
+  list-style: none;
 }
 .navigation__menu-item {
   text-decoration: none;
@@ -91,6 +94,7 @@
   gap: 25px;
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 .navigation__icon-link {
   margin: 0;
@@ -153,15 +157,20 @@
   margin: 0;
   padding: 0 0 20px;
   gap: 30px;
+  list-style: none;
 }
-.product-information__main-image {
+.product-information__thumbnail {
+  width: 80px;
+  height: 80px;
+}
+.product-information__main-thumbnail {
   margin: 0;
   padding: 0 0 20px;
   width: 522px;
   height: 540px;
   border-bottom: 1px solid #000000;
 }
-.product-information__tab-list {
+.product-information__tab-opener {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -180,7 +189,7 @@
 .product-information__tab:first-child {
   border: 0;
 }
-.product-information__tab-name {
+.product-information__tab-title {
   font-size: 22px;
   font-weight: 500;
   line-height: 26px;
@@ -191,7 +200,7 @@
   margin: 0;
   padding: 0;
 }
-.product-information__tab-text {
+.product-information__tab-description {
   font-size: 17.5px;
   line-height: 21px;
   font-weight: 400;
@@ -224,21 +233,21 @@
   margin: 0;
   padding: 0;
 }
-.product-information__reviews-number {
+.product-information__reviews-estimation {
   margin: 0;
   padding: 0;
   font-size: 14px;
   font-weight: 600;
   line-height: 17px;
 }
-.product-information__name {
+.product-information__product-name {
   margin: 0;
   padding: 0;
   font-weight: 700;
   font-size: 34px;
   line-height: 41px;
 }
-.product-information__name-reviews {
+.product-information__name-and-reviews {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -268,7 +277,7 @@
 }
 .product-information__options-menu {
 }
-.product-information__options {
+.product-information__options-title {
   margin: 0;
   padding: 0;
   font-size: 17.5px;
@@ -297,7 +306,7 @@
   margin: 10px 0 0;
   padding: 0;
 }
-.option-btn_active {
+.product-information__option-btn_black {
   color: #ffffff;
   background-color: #000000;
 }
@@ -368,16 +377,14 @@
   border-bottom: 1px solid #000000;
   width: calc(100% - 81px);
 }
-.product-information__cart-btn {
+.product-information__btn {
   width: 200px;
   height: 41px;
   outline: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #b4e907;
   border-radius: 15px;
-  color: #000000;
   font-size: 17.5px;
   line-height: 21px;
   font-weight: 400;
@@ -385,46 +392,43 @@
   padding: 0;
   text-decoration: none;
 }
-.product-information__buy-btn {
-  width: 200px;
-  height: 41px;
-  outline: 1px solid black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 15px;
+.product-information__btn-cart {
+  background-color: #b4e907;
+  color: #000000;
+}
+.product-information__btn-buy {
   background-color: #000000;
   color: #ffffff;
-  font-size: 17.5px;
-  line-height: 21px;
-  font-weight: 400;
-  margin: 40px 0 25px;
-  padding: 0;
-  text-decoration: none;
 }
-.product-information__feature {
-  color: #000000;
-  text-decoration: none;
-  margin: 0;
-  padding: 0;
-  font-size: 17.5px;
-  line-height: 21px;
-  font-weight: 400;
-}
-.product-information__feature-image {
-  width: 24px;
-  height: 24px;
-  margin: 0 10px 0 0;
-  padding: 0;
-}
-.product-information__features {
+
+.product-information__menu {
   margin: 25px 0 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
-.product-information__feature-span {
+
+.product-information__menu-item {
+  color: #000000;
+  width: fit-content;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  font-size: 17.5px;
+  line-height: 21px;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+}
+.product-information__menu-image {
+  width: 24px;
+  height: 24px;
+  margin: 0 10px 0 0;
+  padding: 0;
+}
+
+.product-information__menu-span {
   text-decoration: underline;
 }
 .promo-marquee {
@@ -465,7 +469,7 @@
   display: flex;
   flex-direction: row;
   gap: 150px;
-  justify-content: space-between;
+  justify-content: center;
 }
 .included__item {
   display: flex;
@@ -508,7 +512,7 @@
   color: #ffffff;
   gap: 20px;
 }
-.promo__title {
+.promo__copy-title {
   max-width: 520px;
   font-size: 34px;
   font-weight: 700;
@@ -516,7 +520,7 @@
   margin: 0;
   padding: 0;
 }
-.promo__paraghraph {
+.promo__copy-paraghraph {
   max-width: 510px;
   margin: 0;
   padding: 0;
@@ -524,15 +528,16 @@
   font-weight: 400;
   line-height: 21px;
 }
-.promo__image {
+.promo__copy-image {
   width: 636px;
 }
 .extra-promo {
   display: flex;
   max-width: calc(100% - 320px);
   margin: 0 auto 60px;
-  justify-content: space-between;
   padding: 0;
+  gap: 17px;
+  justify-content: center;
 }
 .extra-prommo__card {
   max-width: 415px;
@@ -560,6 +565,12 @@
   font-size: 17.5px;
   line-height: 21px;
   font-weight: 400;
+}
+.reviews {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 100px;
+  padding: 0;
 }
 .review-based {
   max-width: 280px;
@@ -630,4 +641,100 @@
   font-size: 34px;
   line-height: 41px;
   font-weight: 700;
+}
+.rewiev__rating {
+  display: flex;
+  flex-direction: row;
+  margin: 34px auto 0;
+  padding: 0;
+  max-width: calc(100% - 40px);
+  width: 100%;
+  align-items: center;
+  gap: 75px;
+}
+.rewiev {
+  margin: 0;
+  padding: 0;
+  width: 280px;
+  height: 220px;
+  background-color: #ffffff;
+  color: #000000;
+  text-decoration: none;
+}
+.rewiev__rating-stars {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 0;
+}
+.rewiev__rating-star {
+  margin: 0;
+  padding: 0;
+  width: 20px;
+  height: 20px;
+}
+.rewiev__days-ago {
+  font-family: 'Roboto';
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  line-height: 26px;
+  font-weight: 300;
+}
+.reviews__items {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  margin: 0 0 41px;
+  padding: 0;
+  transform: translateX(160px);
+}
+.review__title {
+  padding: 0;
+  margin: 11px 0 8px 20px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+  font-family: 'Satoshi-Regular';
+  max-width: calc(100% - 40px);
+  width: 100%;
+}
+.review__coment {
+  max-width: calc(100% - 40px);
+  width: 100%;
+  padding: 0 0 8px;
+  margin: 0 auto;
+  font-family: 'Roboto';
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 300px;
+}
+.review__divider {
+  width: 60px;
+  margin: 0 0 8px 20px;
+  height: 1px;
+  background-color: #000000;
+}
+.review__name {
+  margin: 0 0 0 20px;
+  padding: 0;
+  font-size: 14px;
+  font-weight: 700px;
+  line-height: 22px;
+}
+.review__write-btn {
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  text-decoration: none;
+  text-align: center;
+  width: 200px;
+  height: 41px;
+  border-radius: 100px;
+  background-color: #000000;
+  font-size: 17.5px;
+  font-weight: 400;
+  line-height: 21px;
 }
