--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,7 @@
 @import url(../vendor/normalize.css);
 
 @import url(../vendor/fonts/fonts.css);
+/** сделай стили по бэм **/
 .page {
   font-family: 'SF Pro Display', sans-serif;
   text-rendering: optimizeLegibility;
@@ -499,6 +500,7 @@
   padding: 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
   border-radius: 20px;
   overflow: hidden;
 }
@@ -512,7 +514,7 @@
   color: #ffffff;
   gap: 20px;
 }
-.promo__copy-title {
+.promo__title {
   max-width: 520px;
   font-size: 34px;
   font-weight: 700;
@@ -520,7 +522,7 @@
   margin: 0;
   padding: 0;
 }
-.promo__copy-paraghraph {
+.promo__paraghraph {
   max-width: 510px;
   margin: 0;
   padding: 0;
@@ -528,8 +530,9 @@
   font-weight: 400;
   line-height: 21px;
 }
-.promo__copy-image {
-  width: 636px;
+.promo__image {
+  max-width: 636px;
+  width: 100%;
 }
 .extra-promo {
   display: flex;
@@ -539,7 +542,7 @@
   gap: 17px;
   justify-content: center;
 }
-.extra-prommo__card {
+.extra-promo__card {
   max-width: 415px;
   margin: 0;
   padding: 0;
@@ -547,7 +550,7 @@
   flex-direction: column;
   gap: 20px;
 }
-.extra-prommo__image {
+.extra-promo__image {
   width: 415px;
   margin: 0;
   padding: 0;
@@ -593,7 +596,7 @@
   font-weight: 500;
   text-align: center;
 }
-.review-based__stars {
+.review-based__stars-list {
   display: flex;
   margin: 0;
   padding: 0;
@@ -641,6 +644,8 @@
   font-size: 34px;
   line-height: 41px;
   font-weight: 700;
+  margin: 0 0 50px;
+  padding: 0;
 }
 .rewiev__rating {
   display: flex;
@@ -661,13 +666,13 @@
   color: #000000;
   text-decoration: none;
 }
-.rewiev__rating-stars {
+.rewiev__stars-list {
   margin: 0;
   padding: 0;
   display: flex;
   gap: 0;
 }
-.rewiev__rating-star {
+.rewiev__star {
   margin: 0;
   padding: 0;
   width: 20px;
