Добавил секции contact-us, showcase

--- a/blocks/product-information/__reviews/product-information__reviews.css
+++ b/blocks/product-information/__reviews/product-information__reviews.css
@@ -1,6 +1,8 @@
 .product-information__reviews {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
   gap: 5px;
   margin: 0;
   padding: 0;
