--- a/blocks/product-information/__btn/product-information__btn.css
+++ b/blocks/product-information/__btn/product-information__btn.css
@@ -12,4 +12,6 @@
   margin: 40px 0 25px;
   padding: 0;
   text-decoration: none;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 100px;
 }
