--- a/blocks/product-information/__option-btn/_black/product-information__option-btn_black.css
+++ b/blocks/product-information/__option-btn/_black/product-information__option-btn_black.css
@@ -1,4 +1,5 @@
 .product-information__option-btn_black {
   color: #ffffff;
   background-color: #000000;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
 }
